# mcp-alpine

./: Cargo.toml  Dockerfile
.github/workflows/: build.yml
src/: log.rs  main.rs  shell.rs  web.rs
