[package]
name = "mcp-alpine"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "1.7", features = ["server", "macros", "transport-streamable-http-server"] }
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "process", "time", "io-util", "net"] }
tokio-util = "0.7"
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
